* Optimized the TransferManager download to file method to skip the initial HEAD request.
* Added an option to configure that maximum size data that will be uploaded in a single shot via the TransferManager.
* Added request Http Method, URL, and headers to logging messages.

2018.10.29 Version 10.2.0
* Added overloads which only accept the required parameters.
* Added CopyFromURL, which will do a synchronous server-side copy, meaning the service will not return an HTTP response until it has completed the copy.
* Added support for IProgressReceiver in TransferManager operations. This parameter was previously ignored but is now supported.
* Removed internal dependency on javafx to be compatible with openjdk.
* Fixed a bug that would cause downloading large files with the TransferManager to fail.
* Fixed a bug in BlobURL.download() logic for setting up reliable download. This had the potential to download the wrong range when a download stream was retried.

2018.09.11 Version 10.1.0
* Interfaces for helper types updated to be more consistent throughout the library. All types, with the exception of the options for pipeline factories, use a fluent pattern.
* Removed RetryReader type as it's functionality was moved to be built into the DownloadResponse. RetryReaderOptions are now named ReliableDownloadOptions.
* Restructured the access conditions to be more logically adhere to their respective functions.
* Added support for context parameter on each api to allow communication with the pipeline from the application level

2018.08.22 Version 10.0.4-rc
* Support for the 2017-11-09 REST version. Please see our REST api documentation and blogs for information about the related added features.
* Support for 2018-03-28 REST version. Please see our REST api documentation and blogs for information about the related added features.
* Support for the getAccountInfo api on ServiceURL, ContainerURL, and BlobURL.