@@ -22,11 +22,11 @@ import com.microsoft.azure.storage.blob.models.ListContainersIncludeType;
  * requests, so changing the details for a different listing operation requires construction of a new object. Null may
  * be passed if none of the options are desirable.
  */
-public final class ContainerListingDetails {
+public final class ContainerListDetails {
 
     private boolean metadata;
 
-    public ContainerListingDetails() {
+    public ContainerListDetails() {
 
     }
 
@@ -40,14 +40,14 @@ public final class ContainerListingDetails {
     /**
      * Whether metadata should be returned.
      */
-    public ContainerListingDetails withMetadata(boolean metadata) {
+    public ContainerListDetails withMetadata(boolean metadata) {
         this.metadata = metadata;
         return this;
     }
 
     /*
      This is used internally to convert the details structure into the appropriate type to pass to the protocol layer.
-     It is intended to mirror the BlobListingDetails.toList() method, but is slightly different since there is only one
+     It is intended to mirror the BlobListDetails.toList() method, but is slightly different since there is only one
      possible value here currently. The customer should never have need for this.
      */
     ListContainersIncludeType toIncludeType() {
